sidebar: Add scrollbar to sidebar area

--- a/app/assets/stylesheets/less/_page.less
+++ b/app/assets/stylesheets/less/_page.less
@@ -11,7 +11,20 @@
     top: 0;
     left: 0;
     bottom: 0;
-    min-height: 100vh;
+    height: 100vh;
+    overflow-y: auto;
+    overflow-x: hidden;
+    -ms-overflow-style: -ms-autohiding-scrollbar;
+
+    &::-webkit-scrollbar {
+        height: 10px;
+        width: 5px;
+        background: lightgray;
+    }
+
+    &::-webkit-scrollbar-thumb {
+        background: #2788ba;
+    }
 
     .nav {
         width: 270px;
