--- a/app/views/error/notfound_default.scala.html
+++ b/app/views/error/notfound_default.scala.html
@@ -35,6 +35,7 @@
                     <a href="https://github.com/nforge/yobi/issues?state=open" target="_blank">@Messages("title.yobi.feedback")</a>
                 </li>
             </ul>
+            @common.usermenu()
         </div>
     </header>
     <div class="page-wrap-outer">
