--- a/app/views/layout.scala.html
+++ b/app/views/layout.scala.html
@@ -95,15 +95,17 @@
             window.parent.document.title = window.document.title;
             window.parent.history.replaceState('', window.document.title, window.location.href);
 
+            if (window.parent === window) {
+                $(".pin > .yobicon-arrow-right").show();
+            } else {
+                console.log("heheh")
+                $(".pin > .yobicon-arrow-left").show();
+            }
+
             $(".pin").on("click", function () {
                 if (window.parent === window) {
-                    window.location.href = "@routes.Application.index?path=" + window.location.pathname;
+                    window.location.href = "@routes.Application.sidebar?path=" + window.location.pathname;
                 } else {
-                    window.parent.$(".sidebar").toggle();
-                    var btn = $("div.pin > i.yobicon-arrow-right").removeClass("yobicon-arrow-right").addClass("yobicon-arrow-left");
-                    if (btn.length < 1) {
-                        $("div.pin > i.yobicon-arrow-left").removeClass("yobicon-arrow-left").addClass("yobicon-arrow-right");
-                    }
                     window.parent.location = window.location.href;
                 }
             });
