profile: Show other members issues

--- a/app/assets/stylesheets/less/_page.less
+++ b/app/assets/stylesheets/less/_page.less
@@ -7343,6 +7343,24 @@ div.diff-body[data-outdated="true"] tr:hover .icon-comment {
     margin: 0;
 }
 
+.for-subtask-progressbar {
+    padding-left: 5px;
+
+    .subtask-progress {
+        display: inline-block;
+        width: 30px;
+        vertical-align: bottom;
+    }
+
+    .completion-ratio {
+        font-size: 0.8em;
+    }
+
+    .subtask {
+        font-size: 0.8em;
+    }
+}
+
 .my-issues {
     .post-item {
         padding: 2px 10px;
