--- a/app/views/issue/my_partial_list.scala.html
+++ b/app/views/issue/my_partial_list.scala.html
@@ -67,6 +67,7 @@
                     @issue.title
                     </a>
                     @displayCommentsAndVoterCount(issue, project)
+                    <span class="for-subtask-progressbar">@partial_list_subtask(project, issue)</span>
                     @for(label <- issue.labels.toList.sortBy(r => (r.category.name, r.name))) {
                         <a href="@urlToList(project, searchCondition.state)&labelIds=@label.id" class="label issue-label list-label" data-label-id="@label.id" style="background:@label.color">@label.name</a>
                     }
@@ -94,8 +95,6 @@
                     @agoOrDateString(issue.createdDate)
                     </span>
                 }
-
-                @partial_list_subtask(project, issue)
 
                 @if(issue.milestone != null && project != null && project.menuSetting != null && project.menuSetting.milestone) {
                 <span class="mileston-tag">
