--- a/app/views/user/partial_issues.scala.html
+++ b/app/views/user/partial_issues.scala.html
@@ -1,111 +1,118 @@
 @**
-* Yobi, Project Hosting SW
+* Yona, 21st Century Project Hosting SW
 *
-* Copyright 2013 NAVER Corp.
-* http://yobi.io
-*
-* @author Keesun Baik
-*
-* Licensed under the Apache License, Version 2.0 (the "License");
-* you may not use this file except in compliance with the License.
-* You may obtain a copy of the License at
-*
-*   http://www.apache.org/licenses/LICENSE-2.0
-*
-* Unless required by applicable law or agreed to in writing, software
-* distributed under the License is distributed on an "AS IS" BASIS,
-* WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-* See the License for the specific language governing permissions and
-* limitations under the License.
+* Copyright Yona & Yobi Authors & NAVER Corp. & NAVER LABS Corp.
+* https://yona.io
 **@
-@(issue:Issue, project:Project)
+@(issue:Issue)
 @import utils.JodaDateUtil
 @import utils.TemplateHelper._
+@import views.html.user._
+@import views.html.issue._
 @import utils.AccessControl._
 
-@urlToList = {@routes.IssueApp.issues(project.owner, project.name, "OPEN", "html", 1)}
-
-@makeLabelLink(project:Project, label:IssueLabel) = {
-    <a href="@urlToList&labelIds=@label.id" class="label issue-label list-label" data-label-id="@label.id" data-color="@label.color" style="background:@label.color">@label.name</a>
-}
-@defining(User.findByLoginId(issue.authorLoginId)){ user =>
-<li class="post-item " id="issue-item-@issue.id">
-    <div class="span10">
-        <a href="@routes.ProjectApp.project(project.owner, project.name)" class="avatar-wrap mlarge">
-            <img src="@urlToProjectLogo(project)" alt="@project.owner / @project.name">
+@displayAuthorName(user: User) = {
+    @if(user.name) {
+        <a href="@routes.UserApp.userInfo(user.loginId)" class="infos-item infos-link-item author-cell" data-toggle="tooltip" data-placement="bottom" title="@user.loginId">
+        @user.getPureNameOnly
         </a>
-        <div class="title-wrap">
-            <a href="@routes.ProjectApp.project(issue.project.owner,issue.project.name)" class="title project">
-                @issue.project.name
-            </a>
-            <span class="post-id">#@issue.getNumber</span>
-            <a href="@routes.IssueApp.issue(issue.project.owner, issue.project.name, issue.getNumber)" class="title">
-                @issue.title
-            </a>
-        </div>
-        <div class="infos">
-            @if(user.name){
-                <a href="@routes.UserApp.userInfo(user.loginId)" class="infos-item infos-link-item" data-toggle="tooltip" data-placement="top" title="@user.loginId">
-                    @user.getDisplayName
-                </a>
-            } else {
-                <span class="infos-item">@Messages("issue.noAuthor")</span>
-            }
+    } else {
+        <span class="infos-item">@Messages("issue.noAuthor")</span>
+    }
+}
 
-            <span class="infos-item" title="@JodaDateUtil.getDateString(issue.createdDate)">
-                @agoOrDateString(issue.createdDate)
-            </span>
-
-            @if(project.menuSetting.milestone && issue.milestone != null) {
-            <span class="infos-item mileston-tag">
-                <a href="@routes.MilestoneApp.milestone(issue.project.owner, issue.project.name, issue.milestone.id)" data-toggle="tooltip" data-placement="top" title="@Messages("milestone")">
-                    @issue.milestone.title
-                </a>
-            </span>
-            }
-
-            @if(issue.comments.size>0 || issue.voters.size>0) {
-            <span class="infos-item item-count-groups">
-            @if(issue.comments.size>0){
-                @countHtml("comments",routes.IssueApp.issue(issue.project.owner, issue.project.name, issue.getNumber).toString() + "#comments", issue.comments.size )
-            }
-            @if(issue.voters.size>0){
-                @countHtml("hearts",routes.IssueApp.issue(issue.project.owner, issue.project.name, issue.getNumber).toString() + "#vote", issue.voters.size, "strong" )
-            }
-            </span>
-            }
-            
-            @for(label <- issue.labels.toList.sortBy(r => (r.category.name, r.name))) {
-                @makeLabelLink(project, label)
-            }
-        </div>
-    </div>
-    <div class="span2">
-        <div class="mt5 pull-right">
-            @if(issue.assigneeName != null) {
-                <a href="@routes.UserApp.userInfo(issue.assignee.user.loginId)" class="avatar-wrap assinee" data-toggle="tooltip" data-placement="top" title="@Messages("issue.assignee"): @issue.assigneeName">
-                    <img src="@issue.assignee.user.avatarUrl" width="32" height="32" alt="@issue.assigneeName">
-                </a>
-            } else {
-               <div class="empty-avatar-wrap">&nbsp;</div>
-            }
-        </div>
-        <div class="pull-right">
-            @if(issue.dueDate != null) {
-            <div class="mr20 mt10 pull-right @if(issue.isOverDueDate) {overdue}" data-toggle="tooltip" data-placement="top" title="@issue.getDueDateString">
-                <i class="yobicon-clock2"></i>
-                @if(issue.isOpen) {
-                    @if(issue.isOverDueDate) {
-                        @Messages("issue.dueDate.overdue")
-                    } else {
-                        @issue.until
-                    }
-                } else {
-                    @issue.getDueDateString
-                }
-            </div>
-        </div>
+@displayCommentsAndVoterCount(issue:Issue, project:Project) = {
+@if(issue.comments.size > 0 || issue.voters.size > 0) {
+    <span class="item-count-groups">
+        @if(issue.comments.size > 0) {
+            @views.html.common.commentCount(routes.IssueApp.issue(project.owner, project.name, issue.getNumber).toString + "#comments", issue.comments.size)
         }
-    </div>
-</li>
+        @if(issue.voters.size > 0) {
+            @views.html.common.voteCount(routes.IssueApp.issue(project.owner, project.name, issue.getNumber).toString + "#vote", issue.voters.size)
+        }
+    </span>
+}
+}
+
+@urlToList(project:Project, state:String) = {@routes.IssueApp.issues(project.owner, project.name, "open", "html", 1)}
+
+@issueLabels(issue:Issue) = {@for(label <- issue.labels.toList.sortBy(r => (r.category.name, r.name))) {@label.category.name,@label.id,@label.name|}}
+
+
+@defining(User.findByLoginId(issue.authorLoginId)){ user =>
+    @defining(issue.project){ project =>
+        @defining(User.findByLoginId(issue.authorLoginId)){ user =>
+            <li class="post-item title" id="issue-item-@issue.id" href="@routes.IssueApp.issue(project.owner, project.name, issue.getNumber)">
+                <div class="span12 span-hard-wrap">
+                    <div class="span2 project-name-in-my-issues fixed-height-my-issues-list">
+                        <span class="infos-item project-name">
+                            <a href="@routes.ProjectApp.project(project.owner,project.name)" class="title project" data-toggle="tooltip" data-placement="bottom" title="@Messages("project.name")">
+                            @project.name
+                            </a>
+                        </span>
+                        <span class="infos-item post-id">#@issue.getNumber</span>
+                    </div>
+                    <div class="title-wrap span6">
+                        <span class="title-cell">
+                            <a href="@routes.IssueApp.issue(project.owner, project.name, issue.getNumber)" class="title">
+                            @issue.title
+                            </a>
+                            @displayCommentsAndVoterCount(issue, project)
+                            <span class="for-subtask-progressbar">@partial_list_subtask(project, issue)</span>
+                            @for(label <- issue.labels.toList.sortBy(r => (r.category.name, r.name))) {
+                                <a href="@urlToList(project, issue.state.state)&labelIds=@label.id" class="label issue-label list-label" data-label-id="@label.id" style="background:@label.color">@label.name</a>
+                            }
+                            <div class="child-issue-list hide">
+                            @if(issue.hasChildIssue){
+                                @partial_view_childIssueListOnly(issue, project)
+                            }
+                            </div>
+                        </span>
+                    </div>
+                    <div class="span1 hide-in-mobile author project-name-in-my-issues fixed-height-my-issues-list">
+                    @displayAuthorName(user)
+                    </div>
+                    <div class="infos span3 meta">
+                        <span class="meta-cell">
+                            <span class="hide show-in-mobile">
+                            @displayAuthorName(user)
+                            </span>
+                            @if(!issue.createdDate.equals(issue.updatedDate)) {
+                                <span class="infos-item" data-toggle="tooltip" data-placement="bottom" title="Last Updated @JodaDateUtil.getDateString(issue.updatedDate)">
+                                @agoOrDateString(issue.updatedDate)
+                                </span>
+                            } else {
+                                <span class="infos-item" data-toggle="tooltip" data-placement="bottom" title="Created at @JodaDateUtil.getDateString(issue.createdDate)">
+                                @agoOrDateString(issue.createdDate)
+                                </span>
+                            }
+
+                            @if(issue.milestone != null && project != null && project.menuSetting != null && project.menuSetting.milestone) {
+                                <span class="mileston-tag">
+                                    <a href="@routes.MilestoneApp.milestone(project.owner, project.name, issue.milestone.id)" data-toggle="tooltip" data-placement="bottom" title="@Messages("milestone")">
+                                    @issue.milestone.title
+                                    </a>
+                                </span>
+                            }
+
+                            @if(issue.dueDate != null) {
+                                <span class="pull-right @if(issue.isOverDueDate) {overdue}" data-toggle="tooltip" data-placement="top" title="Due date: @issue.getDueDateString">
+                                    <i class="yobicon-clock2"></i>
+                                    @if(issue.isOpen) {
+                                        @if(issue.isOverDueDate) {
+                                            @Messages("issue.dueDate.overdue")
+                                        } else {
+                                            @issue.until
+                                        }
+                                    } else {
+                                        @issue.getDueDateString
+                                    }
+                                </span>
+                            }
+                        </span>
+                    </div>
+                </div>
+            </li>
+        }
+    }
 }
