profile: Polish profile page
- Enhance performance
- Search from whole issues, not just for projects of member

--- a/app/assets/stylesheets/less/_page.less
+++ b/app/assets/stylesheets/less/_page.less
@@ -529,6 +529,7 @@
 
                     .user-project-list {
                         .star {
+                            font-size: 24px;
                             color: rgba(255, 255, 255, 0.22);
                             &:hover {
                                 color: #e91e63;
@@ -4998,7 +4999,7 @@ label.issue-item-row {
 }
 
 .user-stream-box {
-    margin-left: 220px;
+    padding-left: 20px;
     overflow: hidden;
     .h5-title {
       background-color: #615353;
