issue: Support issue weight feature
Higher weighted issues will be shown first in the list.

--- a/app/assets/stylesheets/less/_page.less
+++ b/app/assets/stylesheets/less/_page.less
@@ -3818,6 +3818,14 @@ label.issue-item-row {
         overflow: hidden;
         position: relative;
 
+        .weight-up-arrow {
+            color: #8bc34a;
+        }
+
+        .weight-down-arrow {
+            color: red;
+        }
+
         .post-id {
             color:#999;
             margin-right:5px;
@@ -7633,4 +7641,20 @@ div.diff-body[data-outdated="true"] tr:hover .icon-comment {
         opacity: 0;
     }
 
+}
+
+.issue-weight {
+    .divider {
+        color: grey;
+        margin: 0 3px;
+    }
+    .title {
+    }
+    .weight-number {
+        color: #795548;
+        font-weight: 500;
+        font-size: 20px;
+        margin-left: 5px;
+        vertical-align: middle;
+    }
 }
